also fix status bar alignment for non-compact

--- a/stylesheets/compact.less
+++ b/stylesheets/compact.less
@@ -34,7 +34,6 @@
     .inline-block {
       height: @tab-height / @modular-scale;
       line-height: @tab-height / @modular-scale;
-      vertical-align: top;
     }
   }
 }
