--- a/stylesheets/status-bar.less
+++ b/stylesheets/status-bar.less
@@ -8,4 +8,7 @@
   > * {
     padding: 0 @modular-scale-s * 1rem;
   }
+  .inline-block {
+    vertical-align: top;
+  }
 }
